--- a/templates/base.html
+++ b/templates/base.html
@@ -497,31 +497,14 @@ hr {
       <div class = "row">
         <h4 style="text-align:center">Developed by</h4>
         <hr>
-        <div class = "col-xs-6 col-sm-3">
-          <h4>
-            <a href="https://www.instagram.com/jaysoftic/" target="_blank"><i class="fab fa-instagram"></i> Instagram</a>
-          </h4>
-          <h4>
-            <a href="https://www.linkedin.com/in/jaysoftic/" target="_blank"><i class="fab fa-linkedin-square"></i> Linkedin</a>
-          </h4>
-          <h4>
-            <a href="https://github.com/jaysoftic" target="_blank"><i class="fab fa-github"></i> Github</a>
-          </h4>
-          <h4>
-            <a href="https://www.kaggle.com/jaysoftic/" target="_blank"><i class="fab fa-kaggle"></i> Kaggle</a>
-          </h4>          
-        </div>
+          <h4 style="text-align:center">
+            Archit Suri, Kartik Sood, Tanishq Soin
+          </h4> 
         <div class = "col-xs-0 col-sm-6">
 
         </div>
-        <div class = "col-xs-6 col-sm-3">
-          <img src="{{ url_for('static', filename = 'other images/jaysoftic_brand.png') }}"  alt="jaysoftic" height="47%" width="70%" title = "jaysoftic" class = "dish_frame_all_diet" style="padding: 1%;" align="right">
-        </div>
       </div>
       <br>
-      <div class="row" style="background-color: #0b2438;">
-        <p style="color:wheat; text-align: center;">Be patient, be strong and never give up.<br>Great things take time.</p>
-      </div>
     </div>
   </footer>
 </body>
